<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pokemon_classic"
        android:text="@string/txt_nombre"
        android:textColor="@color/design_default_color_primary_variant"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

    <EditText
        android:id="@+id/editTextNom"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/ext_nombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="126dp"
        android:layout_height="66dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/logogo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_coordenadas"
        android:textColor="@color/design_default_color_primary_variant"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/pokemon_solid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.24" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pokemon_classic"
        android:text="@string/txt_coordenadasX"
        android:textColor="@color/design_default_color_primary_variant"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <EditText
        android:id="@+id/editTextCX"
        android:layout_width="199dp"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:text="@string/ext_coordenadaX"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.312"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pokemon_classic"
        android:text="@string/txt_coordenadasY"
        android:textColor="@color/design_default_color_primary_variant"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.434" />

    <EditText
        android:id="@+id/editTextCY"
        android:layout_width="199dp"
        android:layout_height="40dp"
        android:inputType="textPersonName|text"
        android:text="@string/ext_coordenadaY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.432"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="260dp"
        android:layout_height="261dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.817">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_pregunta"
            android:fontFamily="@font/pokemon_solid"
            android:textColor="@color/design_default_color_primary_variant"
            android:textSize="16sp"
            android:visibility="visible"
            tools:visibility="visible" />

        <RadioButton
            android:id="@+id/rbAgua"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:drawableLeft="@drawable/agua"
            android:fontFamily="@font/pokemon_classic"
            android:text="@string/opcion_agua"
            android:textColor="#2196F3"
            android:textSize="14sp"
            android:visibility="visible"
            tools:visibility="visible" />

        <RadioButton
            android:id="@+id/rbFuego"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:drawableLeft="@drawable/fuego"
            android:fontFamily="@font/pokemon_classic"
            android:text="@string/opcion_fuego"
            android:textColor="#F30707"
            android:textSize="14sp"
            android:visibility="visible"
            tools:visibility="visible" />

        <RadioButton
            android:id="@+id/rbPlanta"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:drawableLeft="@drawable/planta"
            android:fontFamily="@font/pokemon_classic"
            android:minHeight="48dp"
            android:text="@string/opcion_tierra"
            android:textColor="#2D6129"
            android:textSize="14sp"
            android:visibility="visible"
            tools:ignore="TouchTargetSizeCheck"
            tools:visibility="visible" />

        <RadioButton
            android:id="@+id/rbElectrico"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:drawableLeft="@drawable/rayo"
            android:fontFamily="@font/pokemon_classic"
            android:minHeight="48dp"
            android:text="@string/opcion_electrico"
            android:textColor="#FFE500"
            android:textSize="14sp"
            android:visibility="visible"
            tools:ignore="TouchTargetSizeCheck"
            tools:visibility="visible" />

    </RadioGroup>

    <Button
        android:id="@+id/boton_enviar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_enviar"
        android:textColor="@color/design_default_color_primary_variant"
        android:drawableLeft="@drawable/mochila"
        android:fontFamily="@font/pokemon_solid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.973"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/pikachu" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.726"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/bullbasaur" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/charmander" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/squirtle" />

    <ImageButton
        android:id="@+id/boton_volver"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/boton_enviar"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@drawable/cross"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>