<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/boton_listar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="180dp"
        android:layout_height="59dp"
        android:drawableLeft="@drawable/pokedexlogo"
        android:text="@string/boton_listar"
        android:fontFamily="@font/pokemon_solid"
        android:textColor="@color/design_default_color_primary_variant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.766"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/boton_capturar"
        android:layout_width="182dp"
        android:layout_height="60dp"
        android:drawableLeft="@drawable/pokeball"
        android:text="@string/boton_capturar"
        android:fontFamily="@font/pokemon_solid"
        android:textColor="@color/design_default_color_primary_variant"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894" />

    <Button
        android:id="@+id/boton_introducir"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="182dp"
        android:layout_height="60dp"
        android:drawableLeft="@drawable/mapa"
        android:text="@string/boton_introducir"
        android:fontFamily="@font/pokemon_solid"
        android:textColor="@color/design_default_color_primary_variant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="297dp"
        android:layout_height="277dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>